@@ -147,36 +147,38 @@ tweet_list_setup_view (TwituxTweetList *list)
 
 	priv = GET_PRIV (list);
 	
-	g_object_set (list,
-				  "rules-hint", TRUE,
-				  "reorderable", FALSE,
-				  "headers-visible", FALSE,
-				  NULL);
+	g_object_set(list,
+				 "rules-hint", TRUE,
+				 "reorderable", FALSE,
+				 "headers-visible", FALSE,
+				 NULL);
 
-	renderer = gtk_cell_renderer_pixbuf_new ();
+	renderer = gtk_cell_renderer_pixbuf_new();
+	gtk_cell_renderer_set_fixed_size (renderer, 48, 48);
 	avatar_column =
 		gtk_tree_view_column_new_with_attributes (NULL,
 												  renderer,
 												  "pixbuf", PIXBUF_AVATAR,
 												  NULL);
-
-	gtk_tree_view_append_column (GTK_TREE_VIEW (list), avatar_column);
-
-	renderer = gtk_cell_renderer_text_new ();
+	gtk_tree_view_column_set_sizing (avatar_column, GTK_TREE_VIEW_COLUMN_FIXED);
+	gtk_tree_view_column_set_min_width (avatar_column, 48);
+	gtk_tree_view_column_set_fixed_width (avatar_column, 48);
+	gtk_tree_view_append_column (GTK_TREE_VIEW (list),
+								 avatar_column);
+	
+	renderer = gtk_cell_renderer_text_new();
 	tweet_column =
 		gtk_tree_view_column_new_with_attributes (NULL,
 												  renderer,
 												  "markup", STRING_TEXT,
 												  NULL);
-	gtk_tree_view_column_set_sizing (tweet_column,
-									 GTK_TREE_VIEW_COLUMN_FIXED);
+	gtk_tree_view_column_set_sizing (tweet_column, GTK_TREE_VIEW_COLUMN_FIXED);
 	g_object_set (renderer,
 				  "ypad", 0,
 				  "xpad", 5,
 				  "yalign", 0.0,
 				  "wrap-mode", PANGO_WRAP_WORD_CHAR,
 				  NULL);
-
 	gtk_tree_view_append_column (GTK_TREE_VIEW (list), tweet_column);
 	
 	priv->text_column = tweet_column;
@@ -220,10 +222,11 @@ tweet_list_changed_cb (GtkWidget *widget,
 						-1);
 
 	twitux_app_expand_message (name, date, tweet, pixbuf);
-
+	
 	g_free (name);
 	g_free (tweet);
 	g_free (date);
+	g_object_unref(pixbuf);
 }
 
 static void
